Started modifying the Agent class:     - moved methods from Mean Field class into Agent, since mean field is specific to the agent now     - started fleshing out the methods for the Mean Field.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -62,10 +62,6 @@
     "        self.control_indices = control_indices\n",
     "        self.mf = mean_field\n",
     "        self.bb = blackboard\n",
-    "        self.u_s_vec = None\n",
-    "        self.qp_l_vec = None\n",
-    "        self.u_s_dict = None\n",
-    "        self.qp_l_dict = None\n",
     "\n",
     "        # Inputs for numerical propagator\n",
     "        # qp_vec is going to be [q_s, p_l, p_mf], so it will have dimension = 3*state_dim\n",
@@ -169,42 +165,14 @@
     "        # for u-dot\n",
     "        return -1*Gamma*np.zeros(np.shape(u_vec))\n",
     "\n",
-    "#     def qp_rhs_H_s_nou(self, t, qp_vec, **kwargs):\n",
-    "#         # This will include a term for qp_rhs_l and a term for qp_rhs_MF\n",
-    "#         # kwargs should have quenched values\n",
-    "#         qp_vec_quenched = self.bb.construct_q_p(qp_vec, self)\n",
-    "#         # yes it is really slow, but we read from blackboard every time we evaluate this\n",
-    "#         qp_rhs_H_s = (1-alpha)*self.qp_rhs_H_l_nou(qp_vec) + alpha*mf.qp_rhs_H_mf_nou(qp_vec)\n",
-    "#         # must return result in qp_vec format because ode rk23 will call this\n",
-    "#         # qp_rhs_H_s should look like this: np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
-    "#         return qp_rhs_H_s\n",
-    "       \n",
-    "#     def qp_rhs_H_s_u(self, t, qp_vec, **kwargs):\n",
-    "#         # This will include a term for qp_rhs_l and a term for qp_rhs_MF: \n",
-    "#         qp_rhs_H_s = (1-alpha)*qp_rhs_l(self, qp_vec) + alpha*qp_rhs_MF()\n",
-    "#         return np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
-    "       \n",
-    "#     def u_rhs_H_s_nou(self, t, u_vec, **kwargs):\n",
-    "#         # This will include a term for qp_rhs_l and a term for qp_rhs_MF: \n",
-    "#         Gamma = kwargs['Gamma']\n",
-    "#         # for u-dot\n",
-    "#         return -1*Gamma*np.zeros(np.shape(u_vec))\n",
-    "\n",
-    "#     def u_rhs_H_s_u(self, t, u_vec, **kwargs):\n",
-    "#         # This will include a term for qp_rhs_l and a term for qp_rhs_MF: \n",
-    "#         return np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
-    "#         Gamma = kwargs['Gamma']\n",
-    "#         # for u-dot\n",
-    "#         return -1*Gamma*np.zeros(np.shape(u_vec))\n",
-    "\n",
-    "    def H_l_D():\n",
-    "        pass\n",
+    "    def H_l_D(self, q_lD, p_lD):\n",
+    "        return np.array(q_lD).dot(p_lD) \n",
     "        \n",
-    "    def L_l_D():\n",
-    "        pass\n",
+    "    def L_l_D(self, q_lD, p_lD):\n",
+    "        return np.array(q_lD).dot(p_lD)\n",
     "        \n",
-    "    def L_l_D_q_Dot():\n",
-    "        pass\n",
+    "    def L_l_D_q_Dot(self, q_lD, p_lD):\n",
+    "        return q_lD\n",
     "\n",
     "    def qp_rhs(self, t, qp_vec, **kwargs):\n",
     "        # u_s is constant (because of causality, remember?)\n",
@@ -244,7 +212,42 @@
     "\n",
     "    def u_rhs(self, t, u_vec, **kwargs):\n",
     "        return -1*self.Gamma*np.zeros(np.shape(u_vec)) \n",
-    "\n"
+    "\n",
+    "    ## Mean Field methods \n",
+    "    def H_MF_nou(self, q_s, p_mf, p_l, u_s):\n",
+    "        return 1\n",
+    "\n",
+    "    def H_MF_u(self, q_s, p_mf, p_l, u_s):\n",
+    "        return 1\n",
+    "        \n",
+    "    def qp_rhs_H_mf(self, q_s, p_mf, p_l, u_s):\n",
+    "        # remember that we want to propagate as much as possible together in the same rhs function for numerical purposes\n",
+    "        # remember that q_rhs here is w.r.t p_mf but p_rhs here is w.r.t q_s\n",
+    "        q_H_mf_dot = self.p_rhs_H_mf(q_s, p_mf, p_l, u_s)\n",
+    "        p_H_mf_dot = self.q_rhs_H_mf(q_s, p_mf, u_s)\n",
+    "        return np.concatenate([q_H_mf_dot, p_H_mf_dot])\n",
+    "    \n",
+    "    def q_rhs_H_mf(self, q_s, p_mf, u_s):\n",
+    "        p_H_mf_dot = self.q_rhs_H_mf_nou(q_s, p_mf) + sum(self.q_rhs_H_mf_u(q_s, p_mf)*u for i,j in zip())\n",
+    "        return p_H_mf_dot\n",
+    "        \n",
+    "    def q_rhs_H_mf_u(self, q_s, p_mf):\n",
+    "        # there should be one of these for each control variable\n",
+    "        p_H_mf_u_dot_1 = q_s + p_mf # or something\n",
+    "        return np.concatenate([p_H_mf_u_dot_1]) #, p_H_mf_u_dot_2])\n",
+    "    \n",
+    "    def p_rhs_H_mf(self, q_s, p_mf, p_l, u_s):\n",
+    "        return self.p_rhs_H_mf_nou(q_s, p_mf) + sum([self.p_rhs_H_mf_u(q_s, p_mf)*u for i,j in zip()])\n",
+    "\n",
+    "    def p_rhs_H_mf_nou(self, q_s, p_mf):\n",
+    "        return q_s+p_mf # or something\n",
+    "\n",
+    "    def q_rhs_H_mf_nou(self, q_s, p_mf):\n",
+    "        p_H_mf_nou_dot_1 = q_s + p_mf\n",
+    "        return np.concatenate([p_H_mf_nou_dot_1]) #, p_H_mf_nou_dot_2])\n",
+    "\n",
+    "    def p_rhs_H_mf_u(self, q_s, p_mf):\n",
+    "        return \n"
    ]
   },
   {
@@ -421,29 +424,8 @@
     "    \n",
     "    def u_rhs(self, t, u_vec, **kwargs):\n",
     "        return -1*self.Gamma*np.zeros(np.shape(u_vec)) \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## MeanField"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "class MeanField:\n",
-    "    \n",
-    "    def __init__(self):\n",
-    "        pass\n",
-    "    \n",
+    "\n",
+    "    ## Mean Field methods \n",
     "    def H_MF_nou(self, q, p):\n",
     "        pass\n",
     "\n",
@@ -478,7 +460,64 @@
     "        return np.concatenate([p_H_mf_nou_dot_1]) #, p_H_mf_nou_dot_2])\n",
     "\n",
     "    def p_rhs_H_mf_u():\n",
+    "        pass\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MeanField"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "class MeanField:\n",
+    "    \n",
+    "    def __init__(self):\n",
     "        pass\n",
+    "    \n",
+    "#     def H_MF_nou(self, q, p):\n",
+    "#         pass\n",
+    "\n",
+    "#     def H_MF_u(self, q, p):\n",
+    "#         pass\n",
+    "        \n",
+    "#     def qp_rhs_H_mf(self, q_s, p_mf, p_l, u_s):\n",
+    "#         # remember that we want to propagate as much as possible together in the same rhs function for numerical purposes\n",
+    "#         # remember that q_rhs here is w.r.t p_mf but p_rhs here is w.r.t q_s\n",
+    "#         q_H_mf_dot = self.p_rhs_H_mf(q_s, p_mf, p_l, u_s)\n",
+    "#         p_H_mf_dot = self.q_rhs_H_mf(q_s, p_mf, u_s)\n",
+    "#         return np.concatenate([q_H_mf_dot, p_H_mf_dot])\n",
+    "    \n",
+    "#     def q_rhs_H_mf(self, q_s, p_mf, u_s):\n",
+    "#         p_H_mf_dot = self.q_rhs_H_mf_nou(q_s, p_mf) + sum(self.q_rhs_H_mf_u(q_s, p_mf)*u for i,j in zip())\n",
+    "#         return p_H_mf_dot\n",
+    "        \n",
+    "#     def q_rhs_H_mf_u(self, q_s, p_mf):\n",
+    "#         # there should be one of these for each control variable\n",
+    "#         p_H_mf_u_dot_1 = q_s + p_mf # or something\n",
+    "# #         p_H_mf_u_dot_2 = q_s[1] + p_mf[1] # or something\n",
+    "#         return np.concatenate([p_H_mf_u_dot_1]) #, p_H_mf_u_dot_2])\n",
+    "    \n",
+    "#     def p_rhs_H_mf(self, q_s, p_mf, p_l, u_s):\n",
+    "#         return self.p_rhs_H_mf_nou(q_s, p_mf) + sum([self.p_rhs_H_mf_u(q_s, p_mf)*u for i,j in zip()])\n",
+    "\n",
+    "#     def p_rhs_H_mf_nou(self, q_s, p_mf):\n",
+    "#         return q_s+p_mf # or something\n",
+    "\n",
+    "#     def q_rhs_H_mf_nou(self, q_s, p_mf):\n",
+    "#         p_H_mf_nou_dot_1 = q_s + p_mf\n",
+    "#         return np.concatenate([p_H_mf_nou_dot_1]) #, p_H_mf_nou_dot_2])\n",
+    "\n",
+    "#     def p_rhs_H_mf_u():\n",
+    "#         pass\n",
     "          "
    ]
   },
@@ -637,7 +676,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## small test for two agents\n",
+    "## Small test for two agents\n",
     "\n",
     "- Add agents to blackboard and meanfield\n",
     "- Run synchronizer to visit the agents"
