Finished correcting the inputs for class Agent. Next, test propagation for single agent (Agent), and then get the same thing working for Agent2,

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -166,12 +166,15 @@
     "        return -1*Gamma*np.zeros(np.shape(u_vec))\n",
     "\n",
     "    def H_l_D(self, q_lD, p_lD):\n",
-    "        return np.array(q_lD).dot(p_lD) \n",
+    "        # return scalar\n",
+    "        return np.array(q_lD).dot(p_lD)\n",
     "        \n",
     "    def L_l_D(self, q_lD, p_lD):\n",
+    "        # return scalar\n",
     "        return np.array(q_lD).dot(p_lD)\n",
     "        \n",
     "    def L_l_D_q_Dot(self, q_lD, p_lD):\n",
+    "        # return 1 by state_dim, 1-D array\n",
     "        return q_lD\n",
     "\n",
     "    def qp_rhs(self, t, qp_vec, **kwargs):\n",
@@ -182,8 +185,7 @@
     "        p_l = qp_vec[state_dim:2*state_dim]\n",
     "        p_mf = qp_vec[2*state_dim:]\n",
     "\n",
-    "        qp_rhs_H_mf = self.mf.qp_rhs_H_mf(q_s, p_mf, p_l, u_s)\n",
-    "#         import pdb; pdb.set_trace()        \n",
+    "        qp_rhs_H_mf = self.mf.qp_rhs_H_mf(q_s, p_mf, p_l, u_s)      \n",
     "        p_rhs_H_mf = qp_rhs_H_mf[:state_dim]\n",
     "        q_rhs_H_mf = qp_rhs_H_mf[state_dim:]\n",
     "        \n",
@@ -203,7 +205,7 @@
     "        return np.concatenate([q_rhs_H_l, p_rhs_H_l])\n",
     "    \n",
     "    def p_rhs_H_l(self, q_s, p_l, u_s):\n",
-    "        q_s_dot =  q_s+p_l+u_s \n",
+    "        q_s_dot =  q_s + p_l + u_s \n",
     "        return q_s_dot\n",
     "    \n",
     "    def q_rhs_H_l(self, q_s, p_l, u_s):\n",
@@ -213,41 +215,42 @@
     "    def u_rhs(self, t, u_vec, **kwargs):\n",
     "        return -1*self.Gamma*np.zeros(np.shape(u_vec)) \n",
     "\n",
-    "    ## Mean Field methods \n",
-    "    def H_MF_nou(self, q_s, p_mf, p_l, u_s):\n",
+    "    ## Mean Field methods\n",
+    "    def H_MF_nou(self, q_s, p_mf):\n",
     "        return 1\n",
     "\n",
-    "    def H_MF_u(self, q_s, p_mf, p_l, u_s):\n",
+    "    def H_MF_u(self, q_s, p_mf, u_s):\n",
     "        return 1\n",
     "        \n",
-    "    def qp_rhs_H_mf(self, q_s, p_mf, p_l, u_s):\n",
+    "    def qp_rhs_H_mf(self, q_s, p_mf, u_s):\n",
     "        # remember that we want to propagate as much as possible together in the same rhs function for numerical purposes\n",
     "        # remember that q_rhs here is w.r.t p_mf but p_rhs here is w.r.t q_s\n",
-    "        q_H_mf_dot = self.p_rhs_H_mf(q_s, p_mf, p_l, u_s)\n",
+    "        q_H_mf_dot = self.p_rhs_H_mf(q_s, p_mf, u_s)\n",
     "        p_H_mf_dot = self.q_rhs_H_mf(q_s, p_mf, u_s)\n",
     "        return np.concatenate([q_H_mf_dot, p_H_mf_dot])\n",
     "    \n",
     "    def q_rhs_H_mf(self, q_s, p_mf, u_s):\n",
-    "        p_H_mf_dot = self.q_rhs_H_mf_nou(q_s, p_mf) + sum(self.q_rhs_H_mf_u(q_s, p_mf)*u for i,j in zip())\n",
+    "        p_H_mf_dot = self.q_rhs_H_mf_nou(q_s, p_mf) + sum(self.q_rhs_H_mf_u(q_s, p_mf, u_s)*u for i,j in zip())\n",
     "        return p_H_mf_dot\n",
     "        \n",
-    "    def q_rhs_H_mf_u(self, q_s, p_mf):\n",
+    "    def q_rhs_H_mf_u(self, q_s, p_mf, u_s):\n",
     "        # there should be one of these for each control variable\n",
     "        p_H_mf_u_dot_1 = q_s + p_mf # or something\n",
-    "        return np.concatenate([p_H_mf_u_dot_1]) #, p_H_mf_u_dot_2])\n",
+    "        return np.concatenate([p_H_mf_u_dot_1])\n",
     "    \n",
-    "    def p_rhs_H_mf(self, q_s, p_mf, p_l, u_s):\n",
-    "        return self.p_rhs_H_mf_nou(q_s, p_mf) + sum([self.p_rhs_H_mf_u(q_s, p_mf)*u for i,j in zip()])\n",
+    "    def p_rhs_H_mf(self, q_s, p_mf, u_s):\n",
+    "        return self.p_rhs_H_mf_nou(q_s, p_mf) + sum([self.p_rhs_H_mf_u(q_s, p_mf, u_s)*u for i,j in zip()])\n",
     "\n",
     "    def p_rhs_H_mf_nou(self, q_s, p_mf):\n",
     "        return q_s+p_mf # or something\n",
     "\n",
     "    def q_rhs_H_mf_nou(self, q_s, p_mf):\n",
     "        p_H_mf_nou_dot_1 = q_s + p_mf\n",
-    "        return np.concatenate([p_H_mf_nou_dot_1]) #, p_H_mf_nou_dot_2])\n",
+    "        return np.concatenate([p_H_mf_nou_dot_1])\n",
     "\n",
-    "    def p_rhs_H_mf_u(self, q_s, p_mf):\n",
-    "        return \n"
+    "    def p_rhs_H_mf_u(self, q_s, p_mf, u_s):\n",
+    "        q_H_mf_u_dot = q_s + p_mf\n",
+    "        return np.concatenate([q_H_mf_u_dot])\n"
    ]
   },
   {
