Found out that class Agent was not done corectly.  Still need to call the Lagrangian and its partial derivatives correctly.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -103,11 +103,11 @@
     "        - \n",
     "    '''\n",
     "    \n",
-    "    def L_l(self, q, q_dot, u):\n",
-    "        return\n",
+    "    def L_l(self, q_l, q_l_dot, u_l):\n",
+    "        return 1\n",
     "    \n",
-    "    def L_l_q_dot(self, t, q, q_dot, u, **kwargs):\n",
-    "        return\n",
+    "    def L_l_q_dot(self, t, q_l, q_l_dot, u_l, **kwargs):\n",
+    "        return q_l\n",
     "    \n",
     "    def H_l_nou(self, q, p, lambda_l):\n",
     "        return \n",
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -456,77 +456,19 @@
     "        return self.p_rhs_H_mf_nou(q_s, p_mf) + sum([self.p_rhs_H_mf_u(q_s, p_mf)*u for i,j in zip()])\n",
     "\n",
     "    def p_rhs_H_mf_nou(self, q_s, p_mf):\n",
-    "        return q_s+p_mf # or something\n",
+    "        return q_s + p_mf # or something\n",
     "\n",
     "    def q_rhs_H_mf_nou(self, q_s, p_mf):\n",
     "        p_H_mf_nou_dot_1 = q_s + p_mf\n",
     "        return np.concatenate([p_H_mf_nou_dot_1]) #, p_H_mf_nou_dot_2])\n",
     "\n",
-    "    def p_rhs_H_mf_u():\n",
-    "        pass\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## MeanField"
+    "    def p_rhs_H_mf_u(self, q_s, p_mf):\n",
+    "        return q_s + p_mf\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "class MeanField:\n",
-    "    \n",
-    "    def __init__(self):\n",
-    "        pass\n",
-    "    \n",
-    "#     def H_MF_nou(self, q, p):\n",
-    "#         pass\n",
-    "\n",
-    "#     def H_MF_u(self, q, p):\n",
-    "#         pass\n",
-    "        \n",
-    "#     def qp_rhs_H_mf(self, q_s, p_mf, p_l, u_s):\n",
-    "#         # remember that we want to propagate as much as possible together in the same rhs function for numerical purposes\n",
-    "#         # remember that q_rhs here is w.r.t p_mf but p_rhs here is w.r.t q_s\n",
-    "#         q_H_mf_dot = self.p_rhs_H_mf(q_s, p_mf, p_l, u_s)\n",
-    "#         p_H_mf_dot = self.q_rhs_H_mf(q_s, p_mf, u_s)\n",
-    "#         return np.concatenate([q_H_mf_dot, p_H_mf_dot])\n",
-    "    \n",
-    "#     def q_rhs_H_mf(self, q_s, p_mf, u_s):\n",
-    "#         p_H_mf_dot = self.q_rhs_H_mf_nou(q_s, p_mf) + sum(self.q_rhs_H_mf_u(q_s, p_mf)*u for i,j in zip())\n",
-    "#         return p_H_mf_dot\n",
-    "        \n",
-    "#     def q_rhs_H_mf_u(self, q_s, p_mf):\n",
-    "#         # there should be one of these for each control variable\n",
-    "#         p_H_mf_u_dot_1 = q_s + p_mf # or something\n",
-    "# #         p_H_mf_u_dot_2 = q_s[1] + p_mf[1] # or something\n",
-    "#         return np.concatenate([p_H_mf_u_dot_1]) #, p_H_mf_u_dot_2])\n",
-    "    \n",
-    "#     def p_rhs_H_mf(self, q_s, p_mf, p_l, u_s):\n",
-    "#         return self.p_rhs_H_mf_nou(q_s, p_mf) + sum([self.p_rhs_H_mf_u(q_s, p_mf)*u for i,j in zip()])\n",
-    "\n",
-    "#     def p_rhs_H_mf_nou(self, q_s, p_mf):\n",
-    "#         return q_s+p_mf # or something\n",
-    "\n",
-    "#     def q_rhs_H_mf_nou(self, q_s, p_mf):\n",
-    "#         p_H_mf_nou_dot_1 = q_s + p_mf\n",
-    "#         return np.concatenate([p_H_mf_nou_dot_1]) #, p_H_mf_nou_dot_2])\n",
-    "\n",
-    "#     def p_rhs_H_mf_u():\n",
-    "#         pass\n",
-    "          "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -549,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -594,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -687,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -702,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -713,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -724,7 +666,7 @@
        "{'p_l': {'1': 0}, 'p_mf': {'1': 0}, 'q_s': {'1': 0}, 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
@@ -746,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
@@ -757,7 +699,7 @@
        "{'p_l': {'1': 0}, 'p_mf': {'1': 0}, 'q_s': {'1': 0}, 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
@@ -818,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
@@ -837,7 +779,7 @@
        " [array([0.])])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -868,7 +810,7 @@
        " [array([0.])])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
