I did something very stupid and I made all of the methods which have a "u" in their terms to take "u" as input (e.g. H_l_u takes "u" as an input).  INstead, it should take q and p as inputs, and multiply by "u".

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -106,11 +106,11 @@
     "    def L_l(self, q_l, q_l_dot, u_l):\n",
     "        return 1\n",
     "    \n",
-    "    def L_l_q_dot(self, t, q_l, q_l_dot, u_l, **kwargs):\n",
+    "    def L_l_q_dot(self, q_l, q_l_dot, u_l):\n",
     "        return q_l\n",
     "    \n",
-    "    def H_l_nou(self, q, p, lambda_l):\n",
-    "        return \n",
+    "    def H_l_nou(self, q_l, p_l, lambda_l):\n",
+    "        return 1\n",
     "\n",
     "    def qp_rhs_H_l_nou(self, t, qp_vec, **kwargs):\n",
     "        dim = len(qp_vec)/2\n",
@@ -134,10 +134,10 @@
     "        p_D = qp_vec[3*dim:]\n",
     "        Gamma = kwargs['Gamma']\n",
     "        # for u-dot\n",
-    "        returnurn -1*Gamma*np.zeros(np.shape(u_vec))\n",
+    "        return -1*Gamma*np.zeros(np.shape(u_vec))\n",
     "\n",
-    "    def H_l_u(self, q, p, u):\n",
-    "        return \n",
+    "    def H_l_u(self, q_l, p_l, u_s):\n",
+    "        return 1\n",
     "    \n",
     "    def qp_rhs_H_l_u(self, t, qp_vec, **kwargs):\n",
     "        dim = len(qp_vec)/4\n",
