--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -52,7 +52,7 @@
     "        state_indices (list of integers): This list tells which states pertain to this agent. e.g. [1,2] would \n",
     "        tell us that states 1 and 2 pertain to this agent.\n",
     "        \n",
-    "        A word on notation:  The notation used for the methods of the agent is:  \n",
+    "        A word oNn notation:  The notation used for the methods of the agent is:  \n",
     "            - If it is a partial derivative: <denominator>_rhs_H_<type of hamiltonian (l, mf, or s)>_<nou or u>.  e.g., \n",
     "            \"qp_rhs_H_l_u\" denotes the partial derivative with respect to q and p of the terms in the local Hamiltonian that contain control variables.\n",
     "            - If it is a hamiltonian: H_<type of hamiltonian (l, mf, or s)>_<nou or u>.  e.g. \"H_mf_nou\" denotes the mean field hamiltonian\n",
@@ -69,10 +69,10 @@
     "        self.q_s_0 = np.array([0])\n",
     "        self.p_l_0 = np.array([0])\n",
     "        self.p_mf_0 = np.array([0])\n",
-    "        self.u_0 = np.array([0])\n",
-    "        self.qpu_vec = np.hstack([self.q_s_0, self.p_l_0, self.p_mf_0, self.u_0])\n",
+    "        self.u_s_0 = np.array([0])\n",
+    "        self.qpu_vec = np.hstack([self.q_s_0, self.p_l_0, self.p_mf_0, self.u_s_0])\n",
     "        self.state_dim = 1\n",
-    "        self.Gamma = 1 \n",
+    "        self.Gamma = 1\n",
     "        self.gamma = 1\n",
     "\n",
     "        # Inputs for numerical integration\n",
@@ -92,7 +92,7 @@
     "    def validate_dimensions(self):\n",
     "        # TODO: move to parent class \"SlidingWindow\"\n",
     "        assert len(self.state_indices) == self.state_dim, 'state dimensions are not consistent.  dimension of state indices is '+str(len(self.state_indices)) +' and state_dim is '+str(self.state_dim)\n",
-    "        assert len(self.control_indices) == len(self.u_0), 'control dimensions are not consistent.  dimension of control_indices is '+str(len(self.control_indices)) +' and len(u_0) is '+str(len(self.u_0))\n",
+    "        assert len(self.control_indices) == len(self.u_s_0), 'control dimensions are not consistent.  dimension of control_indices is '+str(len(self.control_indices)) +' and len(u_0) is '+str(len(self.u_s_0))\n",
     "        assert len(self.qpu_vec) == 3*self.state_dim + len(self.control_indices), ' control and state dimensions are not consistent with qpu_vec : length of qpu_vec is '+str(len(self.qpu_vec))+ ' and 3*self.state_dim + len(self.control_indices) is ' + str(3*self.state_dim + len(self.control_indices))\n",
     "    \n",
     "    '''\n",
@@ -103,78 +103,62 @@
     "        - \n",
     "    '''\n",
     "    \n",
-    "    def L_l(self, q_l, q_l_dot, u_l):\n",
+    "    def L_l(self, q_s, q_s_dot, u_s):\n",
     "        return 1\n",
     "    \n",
-    "    def L_l_q_dot(self, q_l, q_l_dot, u_l):\n",
+    "    def L_l_q_dot(self, q_s, q_s_dot, u_s):\n",
     "        return q_l\n",
     "    \n",
-    "    def H_l_nou(self, q_l, p_l, lambda_l):\n",
+    "    def H_l_nou(self, q_s, p_l, lambda_l):\n",
     "        return 1\n",
     "\n",
-    "    def qp_rhs_H_l_nou(self, t, qp_vec, **kwargs):\n",
-    "        dim = len(qp_vec)/2\n",
-    "        q = qp_vec[:dim]\n",
-    "        p = qp_vec[dim:2*dim]\n",
-    "        u = kwargs['u_0']\n",
-    "        # for q-dot\n",
-    "        q_dot =  np.zeros(np.shape(p))\n",
-    "        # for p-dot\n",
-    "        p_dot =  np.zeros(np.shape(q))\n",
-    "        q_D_dot = np.zeros(np.shape(p))\n",
-    "        p_D_dot = np.zeros(np.shape(q))\n",
-    "        return np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
+    "    def p_rhs_H_l_nou(self, q_s, p_l, lambda_l):\n",
+    "        return np.array(p_l)\n",
+    "    \n",
+    "    def q_rhs_H_l_nou(self, q_s, p_l, lambda_l):\n",
+    "        return np.array(p_l)\n",
     "       \n",
-    "    def u_rhs_H_l_nou(self, t, u_vec, **kwargs):\n",
-    "        qp_vec = kwargs['qp_vec']\n",
-    "        dim = len(qp_vec)/4\n",
-    "        q = qp_vec[:dim]\n",
-    "        p = qp_vec[dim:2*dim]\n",
-    "        q_D = qp_vec[2*dim:3*dim]\n",
-    "        p_D = qp_vec[3*dim:]\n",
-    "        Gamma = kwargs['Gamma']\n",
-    "        # for u-dot\n",
-    "        return -1*Gamma*np.zeros(np.shape(u_vec))\n",
+    "#     def u_rhs_H_l_nou(self, q_s, p_l, lambda_l):\n",
+    "#         dim = len(qp_vec)/4\n",
+    "#         q = qp_vec[:dim]\n",
+    "#         p = qp_vec[dim:2*dim]\n",
+    "#         return -1*Gamma*np.zeros(np.shape(len(self.u_s_0)))\n",
     "\n",
-    "    def H_l_u(self, q_l, p_l, u_s):\n",
+    "    def H_l_u(self, q_s, p_l):\n",
     "        return 1\n",
     "    \n",
-    "    def qp_rhs_H_l_u(self, t, qp_vec, **kwargs):\n",
-    "        dim = len(qp_vec)/4\n",
-    "        q = qp_vec[:dim]\n",
-    "        p = qp_vec[dim:2*dim]\n",
-    "        q_D = qp_vec[2*dim:3*dim]\n",
-    "        p_D = qp_vec[3*dim:]\n",
-    "        u = kwargs['u_0']\n",
-    "        # for q-dot\n",
-    "        q_dot =  np.zeros(np.shape(p))\n",
-    "        # for p-dot\n",
-    "        p_dot =  np.zeros(np.shape(q))\n",
-    "        q_D_dot =  np.zeros(np.shape(p))\n",
-    "        p_D_dot =  np.zeros(np.shape(q))\n",
-    "        return np.concatenate([q_dot, p_dot, q_D_dot, p_D_dot])\n",
+    "    def p_rhs_H_l_u(self, q_s, p_l):\n",
+    "        return np.array(p_l)\n",
+    "    \n",
+    "    def q_rhs_H_l_u(self, q_s, p_l):\n",
+    "        return np.array(p_l)\n",
+    "    \n",
+    "#     def qp_rhs_H_l_u(self, q_s, p_l):\n",
+    "#         q_dot =  np.zeros(np.shape(p_l))\n",
+    "#         p_dot =  np.zeros(np.shape(q_s))\n",
+    "#         return np.concatenate([q_dot, p_dot])/\n",
     "       \n",
-    "    def u_rhs_H_l_u(self, t, u_vec, **kwargs):\n",
-    "        qp_vec = kwargs['qp_vec']\n",
-    "        dim = len(qp_vec)/4\n",
-    "        q = qp_vec[:dim]\n",
-    "        p = qp_vec[dim:2*dim]\n",
-    "        q_D = qp_vec[2*dim:3*dim]\n",
-    "        p_D = qp_vec[3*dim:]\n",
-    "        Gamma = kwargs['Gamma']\n",
-    "        # for u-dot\n",
-    "        return -1*Gamma*np.zeros(np.shape(u_vec))\n",
+    "#     def u_rhs_H_l_u(self, t, u_vec, **kwargs):\n",
+    "#         qp_vec = kwargs['qp_vec']\n",
+    "#         dim = len(qp_vec)/4\n",
+    "#         q = qp_vec[:dim]\n",
+    "#         p = qp_vec[dim:2*dim]\n",
+    "#         q_D = qp_vec[2*dim:3*dim]\n",
+    "#         p_D = qp_vec[3*dim:]\n",
+    "#         Gamma = kwargs['Gamma']\n",
+    "#         # for u-dot\n",
+    "#         return -1*Gamma*np.zeros(np.shape(u_vec))\n",
     "\n",
     "    def H_l_D(self, q_lD, p_lD):\n",
-    "        # return scalar\n",
     "        return np.array(q_lD).dot(p_lD)\n",
     "        \n",
     "    def L_l_D(self, q_lD, p_lD):\n",
     "        # return scalar\n",
-    "        return np.array(q_lD).dot(p_lD)\n",
+    "        return 1\n",
     "        \n",
     "    def L_l_D_q_Dot(self, q_lD, p_lD):\n",
     "        # return 1 by state_dim, 1-D array\n",
+    "        # each q_lD is a 1-D array of size 1 by state_dim array\n",
     "        return q_lD\n",
     "\n",
     "    def qp_rhs(self, t, qp_vec, **kwargs):\n",
@@ -185,7 +169,7 @@
     "        p_l = qp_vec[state_dim:2*state_dim]\n",
     "        p_mf = qp_vec[2*state_dim:]\n",
     "\n",
-    "        qp_rhs_H_mf = self.mf.qp_rhs_H_mf(q_s, p_mf, p_l, u_s)      \n",
+    "        qp_rhs_H_mf = self.qp_rhs_H_mf(q_s, p_mf, p_l, u_s)\n",
     "        p_rhs_H_mf = qp_rhs_H_mf[:state_dim]\n",
     "        q_rhs_H_mf = qp_rhs_H_mf[state_dim:]\n",
     "        \n",
@@ -199,21 +183,24 @@
     "        \n",
     "        return np.concatenate([q_s_dot, p_l_dot, p_mf_dot])\n",
     "    \n",
-    "    def qp_rhs_H_l(self, q_s, p_l, u_s):\n",
-    "        q_rhs_H_l = self.q_rhs_H_l(q_s, p_l, u_s)\n",
-    "        p_rhs_H_l = self.p_rhs_H_l(q_s, p_l, u_s)\n",
+    "    def qp_rhs_H_l(self, q_s, p_l, u_s, lambda_l):\n",
+    "        # there is one lambda_l per \n",
+    "        q_rhs_H_l = self.q_rhs_H_l_nou(q_s, p_l, lambda_l) + sum([self.q_rhs_H_l_u(q_s, p_l)*u_s_i for u_s_i in u_s])\n",
+    "        p_rhs_H_l = self.p_rhs_H_l_nou(q_s, p_l, lambda_l) + sum([self.p_rhs_H_l_u(q_s, p_l)*u_s_i for u_s_i in u_s])\n",
     "        return np.concatenate([q_rhs_H_l, p_rhs_H_l])\n",
     "    \n",
-    "    def p_rhs_H_l(self, q_s, p_l, u_s):\n",
-    "        q_s_dot =  q_s + p_l + u_s \n",
-    "        return q_s_dot\n",
+    "#     def p_rhs_H_l(self, q_s, p_l, u_s):\n",
+    "#         # needs to call p_rhs_H_l_nou and p_rhs_H_l_u\n",
+    "#         q_s_dot =  q_s + p_l + u_s \n",
+    "#         return q_s_dot\n",
     "    \n",
-    "    def q_rhs_H_l(self, q_s, p_l, u_s):\n",
-    "        p_l_dot =  q_s + p_l + u_s\n",
-    "        return p_l_dot\n",
+    "#     def q_rhs_H_l(self, q_s, p_l, u_s):\n",
+    "#         # needs to call q_rhs_H_l_nou and q_rhs_H_l_u\n",
+    "#         p_l_dot =  q_s + p_l + u_s\n",
+    "#         return p_l_dot\n",
     "\n",
     "    def u_rhs(self, t, u_vec, **kwargs):\n",
-    "        return -1*self.Gamma*np.zeros(np.shape(u_vec)) \n",
+    "        return -1*self.Gamma*np.zeros(np.shape(u_vec))\n",
     "\n",
     "    ## Mean Field methods\n",
     "    def H_MF_nou(self, q_s, p_mf):\n",
