--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
@@ -165,15 +165,17 @@
     "        # u_s is constant (because of causality, remember?)\n",
     "        u_s = kwargs['u_0']\n",
     "        state_dim = kwargs['state_dim']\n",
+    "        # TODO:  get a kwargs working for lambda_l\n",
+    "        lambda_l = 0 #kwargs['lambda_l']\n",
     "        q_s = qp_vec[:state_dim]\n",
     "        p_l = qp_vec[state_dim:2*state_dim]\n",
     "        p_mf = qp_vec[2*state_dim:]\n",
     "\n",
-    "        qp_rhs_H_mf = self.qp_rhs_H_mf(q_s, p_mf, p_l, u_s)\n",
+    "        qp_rhs_H_mf = self.qp_rhs_H_mf(q_s, p_mf, u_s)\n",
     "        p_rhs_H_mf = qp_rhs_H_mf[:state_dim]\n",
     "        q_rhs_H_mf = qp_rhs_H_mf[state_dim:]\n",
     "        \n",
-    "        qp_rhs_H_l = self.qp_rhs_H_l(q_s, p_l, u_s)\n",
+    "        qp_rhs_H_l = self.qp_rhs_H_l(q_s, p_l, u_s, lambda_l)\n",
     "        q_rhs_H_l = qp_rhs_H_l[:state_dim]\n",
     "        p_rhs_H_l = qp_rhs_H_l[state_dim:]\n",
     "\n",
@@ -184,7 +186,7 @@
     "        return np.concatenate([q_s_dot, p_l_dot, p_mf_dot])\n",
     "    \n",
     "    def qp_rhs_H_l(self, q_s, p_l, u_s, lambda_l):\n",
-    "        # there is one lambda_l per \n",
+    "        #TODO: there is one lambda_l per constraint. need to work out dimensions.\n",
     "        q_rhs_H_l = self.q_rhs_H_l_nou(q_s, p_l, lambda_l) + sum([self.q_rhs_H_l_u(q_s, p_l)*u_s_i for u_s_i in u_s])\n",
     "        p_rhs_H_l = self.p_rhs_H_l_nou(q_s, p_l, lambda_l) + sum([self.p_rhs_H_l_u(q_s, p_l)*u_s_i for u_s_i in u_s])\n",
     "        return np.concatenate([q_rhs_H_l, p_rhs_H_l])\n",
@@ -217,32 +219,30 @@
     "        return np.concatenate([q_H_mf_dot, p_H_mf_dot])\n",
     "    \n",
     "    def q_rhs_H_mf(self, q_s, p_mf, u_s):\n",
-    "        p_H_mf_dot = self.q_rhs_H_mf_nou(q_s, p_mf) + sum(self.q_rhs_H_mf_u(q_s, p_mf, u_s)*u for i,j in zip())\n",
-    "        return p_H_mf_dot\n",
+    "        return self.q_rhs_H_mf_nou(q_s, p_mf) + sum([self.q_rhs_H_mf_u(q_s, p_mf)*u_i for u_i in u_s])\n",
     "        \n",
-    "    def q_rhs_H_mf_u(self, q_s, p_mf, u_s):\n",
+    "    def q_rhs_H_mf_u(self, q_s, p_mf):\n",
     "        # there should be one of these for each control variable\n",
     "        p_H_mf_u_dot_1 = q_s + p_mf # or something\n",
     "        return np.concatenate([p_H_mf_u_dot_1])\n",
     "    \n",
     "    def p_rhs_H_mf(self, q_s, p_mf, u_s):\n",
-    "        return self.p_rhs_H_mf_nou(q_s, p_mf) + sum([self.p_rhs_H_mf_u(q_s, p_mf, u_s)*u for i,j in zip()])\n",
+    "        return self.p_rhs_H_mf_nou(q_s, p_mf) + sum([self.p_rhs_H_mf_u(q_s, p_mf)*u_i for u_i in u_s])\n",
     "\n",
     "    def p_rhs_H_mf_nou(self, q_s, p_mf):\n",
-    "        return q_s+p_mf # or something\n",
+    "        return q_s + p_mf # or something\n",
     "\n",
     "    def q_rhs_H_mf_nou(self, q_s, p_mf):\n",
-    "        p_H_mf_nou_dot_1 = q_s + p_mf\n",
-    "        return np.concatenate([p_H_mf_nou_dot_1])\n",
+    "        return  q_s + p_mf\n",
     "\n",
-    "    def p_rhs_H_mf_u(self, q_s, p_mf, u_s):\n",
+    "    def p_rhs_H_mf_u(self, q_s, p_mf):\n",
     "        q_H_mf_u_dot = q_s + p_mf\n",
     "        return np.concatenate([q_H_mf_u_dot])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 115,
    "metadata": {
     "collapsed": true
    },
@@ -384,7 +384,7 @@
     "        p_l = qp_vec[state_dim:2*state_dim]\n",
     "        p_mf = qp_vec[2*state_dim:]\n",
     "\n",
-    "        qp_rhs_H_mf = self.mf.qp_rhs_H_mf(q_s, p_mf, p_l, u_s)\n",
+    "        qp_rhs_H_mf = self.qp_rhs_H_mf(q_s, p_mf, u_s)\n",
     "        \n",
     "        p_rhs_H_mf = qp_rhs_H_mf[:state_dim]\n",
     "        q_rhs_H_mf = qp_rhs_H_mf[state_dim:]\n",
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false
    },
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 120,
    "metadata": {
     "collapsed": false
    },
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false
    },
@@ -653,7 +653,7 @@
        "{'p_l': {'1': 0}, 'p_mf': {'1': 0}, 'q_s': {'1': 0}, 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false
    },
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 123,
    "metadata": {
     "collapsed": false
    },
@@ -686,7 +686,7 @@
        "{'p_l': {'1': 0}, 'p_mf': {'1': 0}, 'q_s': {'1': 0}, 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 129,
    "metadata": {
     "collapsed": false
    },
@@ -729,7 +729,7 @@
     "# forgot to pass in 'u_s' as a keyword argument\n",
     "qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us = propagate_dynamics(myAgent)\n",
     "# forgot to pass in 'u_s' as a keyword argument\n",
-    "qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2 = propagate_dynamics(myAgent2)"
+    "# qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2 = propagate_dynamics(myAgent2)"
    ]
   },
   {
@@ -740,14 +740,12 @@
     "    - Test this on a few nonzero inputs\n",
     "    - Test this on multidimensional state\n",
     "    - Test this on multidimensional control\n",
-    "    - Get this working for multiple agents\n",
-    "    \n",
-    "   "
+    "    - Get this working for multiple agents"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 126,
    "metadata": {
     "collapsed": false
    },
@@ -766,7 +764,7 @@
        " [array([0.])])"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 127,
    "metadata": {
     "collapsed": false
    },
@@ -797,7 +795,7 @@
        " [array([0.])])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
